\name{ENmixnews}
\title{ENmix News}
\encoding{UTF-8}

\section{Version 0.99}{
  \itemize{
    \item Initial release to Bioconductor.
    \item Added NEWS file.
    \item Bugfix to vignette.
  }
}