@@ -7,5 +7,13 @@
     \item Initial release to Bioconductor.
     \item Added NEWS file.
     \item Bugfix to vignette.
-  }
-}
+}}
+\section{Version 1.1.1}{
+  \itemize{
+    \item Bugfix in function preprocessENmix for parallel computing. 
+}}
+\section{Version 1.1.2}{
+  \itemize{
+    \item Improve code in function preprocessENmix to use less memory.
+}}
+
